tdf#107292: ODT import: fix order of deletions at same position

Tracked deletions at the same position were loaded in reverse
order, resulting broken text content.

Note: FODT format is not applicable for the unit test document,
because it's not affected by the problem.

Change-Id: Id13f8d23ae5964cbf82095a3d1ce2f6c9fdd59e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126529
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 76784f2dbf6d8641cfb6bf5d24e37521d6c806df)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126509